--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,16 +8,26 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
     #main{
-      margin-top:10px;
+      margin-top:0px;
       height:100% !important
 
     }
     #inner{
-      height:400px;
+      height:330px;
     }
     .main-input{
       margin-top:70px;
     }
+    .page-footer{
+      margin-top:-40px;
+
+    }
+    .container{
+
+  width:95% !important
+
+    }
+
 
     </style>
 </head>
@@ -36,7 +46,7 @@
 
   <!-- Form with validation -->
                 <div id="main" class="col s12 m12 l6">
-                  <div id="inner" class="card-panel teal darken-3">
+                  <div id="inner" class="card-panel white darken-3">
                     <h4 class="header2">Enter the url to Sort</h4>
                     <div class="row main-input">
                       <form action="/shorten" method="POST" class="col s12">
@@ -55,7 +65,7 @@
                                 <i class="fa fa-arrow-right riht" aria-hidden="true"></i>
                               </button>
                             </div>
-                            
+
                           </div>
                       </form>
 
@@ -63,11 +73,42 @@
 
                   </div>
                 </div>
+                <!-- Adding footer content  !-->
+                <footer class="page-footer">
+                       <div class="container">
+                         <div class="row">
+                           <div class="col l6 s12">
+                             <h5 class="white-text">Url Shortener</h5>
+                             <p class="grey-text text-lighten-4">You can Short your long url with the help of this Url Shortner.</p>
+                             <p>Please share it  in your friend circle</p>
+
+                             <br>
+                             <p>© 2017-18, All Rights Reserved</p>
+                           </div>
+                           <div class="col l4 offset-l2 s12">
+                             <h4>Developed by Ashutosh</h4>
+                             <h5 class="white-text"> Meet me here</h5>
+                             <ul>
+                               <li>
+                               <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/ashutosh1001/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i>   Linkedin</a>
+                           </li>
+                           <li><a class="grey-text text-lighten-3" href="https://github.com/kindacoder" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i> Github</a>
+                           </li>
+                           <li><a class="grey-text text-lighten-3" href="https://www.quora.com/profile/Ashutosh-Dwivedi-42" target="_blank"><i class="fa fa-quora" aria-hidden="true"></i> Quora</a>
+                           </li>
+
+                           <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/ashutosh.dwivedid" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>  Facebook</a>
+                           </li>
+
+                             </ul>
+                           </div>
+                         </div>
+                       </div>
+
+                     </footer>
+
+
               </div>
-            </div>
-
-
-      </div>
 
 
 
