--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,8 @@
                              <p>© 2017-18, All Rights Reserved  <a class="grey-text text-lighten-3" href="https://www.ashutoshdwivedi.in/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>  www.ashutoshdwivedi.in</a></p>
                            </div>
                            <div class="col l4 offset-l2 s12">
-                             <h4>Developed by Ashutosh </h4>
+                             <h5>Check out github repository of this project:</h5>
+                             <a class="grey-text text-lighten-3" target="_blank" href="https://github.com/kindacoder/Url-Shortener-NodeJS">Github repository</a>
                              <h5 class="white-text"> Meet me here</h5>
                              <ul>
                                <li><a class="grey-text text-lighten-3" href="https://www.ashutoshdwivedi.in" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>My website</a>
