Fixed various spelling mistakes/labels
Mainly fixed several misspellings of 'shorten', changed a few instances of url or Url to 'URL'.

--- a/views/shorten.ejs
+++ b/views/shorten.ejs
@@ -52,7 +52,7 @@
   <!-- Form with validation -->
                 <div id="main" class="col s12 m12 l6">
                   <div id="inner" class="card-panel white darken-3">
-                    <h4 class="header2">Enter the url to Sort</h4>
+                    <h4 class="header2">Enter the URL to shorten</h4>
                     <div class="row main-input">
                       <form action="/shorten" method="POST" class="col s12">
                         <div class="row">
@@ -86,8 +86,8 @@
                          <div class="row">
                            <div class="col l6 s12">
                              <h5 class="white-text">Url Shortener</h5>
-                             <p class="grey-text text-lighten-4">You can Short your long url with the help of this Url Shortner.</p>
-                             <p>Please share it  in your friend circle</p>
+                             <p class="grey-text text-lighten-4">You can shorten your long URL with the help of this URL Shortener.</p>
+                             <p>Please share this tool with your circle of friends!</p>
 
                              <br>
                              <p>© 2017-18, All Rights Reserved  <a class="grey-text text-lighten-3" href="https://www.ashutoshdwivedi.in/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>  www.ashutoshdwivedi.in</a></p>
