--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
   <!-- Form with validation -->
                 <div id="main" class="col s12 m12 l6">
                   <div id="inner" class="card-panel white darken-3">
-                    <h4 class="header2">Enter the url to Sort</h4>
+                    <h4 class="header2">Enter the url to shorten...</h4>
                     <div class="row main-input">
                       <form action="/shorten" method="POST" class="col s12">
                         <div class="row">
